[package]
name = "metered-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = {version = "0.7.5", features = ["multipart"]}
axum-macros = "0.4.1"
chrono = "0.4.37"
futures-util = "0.3.30"
image = "0.25.1"
lazy_static =  "1.4.0"
mongodb = "2.8.2"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
tokio = {version = "1.37.0", features = ["full"]}
toml = "0.8.12"
wither = "0.9.0"
serde_json = "1.0"
thiserror = "1.0.58"
tokio-util = "0.7.10"
reqwest = "0.12.4"
