[package]
name = "sheet-music-pay-per-view"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# anyhow = "1.0"
axum = {version = "0.7.5", features = ["multipart"]}
axum-extra = {version = "0.9.3", features = ["typed-header"]}
axum-macros = "0.4.1"
base64 = "0.22.1"
bcrypt = "0.15.1"
chrono = "0.4.37"
futures-util = "0.3.30"
image = "0.25.1"
jsonwebtoken = "9.3.0"
mongodb = "2.8.2"
once_cell = "1.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
tokio = {version = "1.37.0", features = ["full"]}
toml = "0.8.12"
serde_json = "1.0"
thiserror = "1.0.58"
reqwest = { version = "0.12.4", features = ["stream","multipart","json"] }
# tower-http = { version = "0.5.2", features = [
#   "trace",
#   "compression-br",
#   "propagate-header",
#   "sensitive-headers",
#   "cors",
# ] }
tokio-util = { version = "0.7.3", features = ["codec"] }
futures = "0.3"
bson = "2.10.0"
time = "0.3.36"
validator = { version = "0.18.1", features = ["derive"] }
mime = "0.3"
bytes = "1.6.0"
